--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "nodemon ./src/indexOfNoLength.js",
     "test": "mocha --require @babel/register 'test/**/**spec.js'",
     "test:watch": "mocha --require @babel/register 'test/**/**spec.js' --watch"
   },
